[project]
name = "groundtruth-eval"
version = "0.1.0"
description = "An open benchmark + harness that scores any context layer grounded analytics agent on natural language -> governed metric correctness, desig"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tarun Aditya Kusupati" }
]
dependencies = []

[project.scripts]
groundtruth-eval = "groundtruth_eval.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
